[package]
name = "overload"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
ctor = { version = "0.6.0", optional = true }
env_logger = "0.11.8"
log = "0.4.28"
shell-words = "1.1.0"

[dev-dependencies]
temp-env = "0.3.6"

[features]
default = ["ld_preload", "ld_audit"]
ld_preload = ["dep:ctor"]
ld_audit = []
